fixed menus not overlaping correctly

--- a/nav-bar/src/index.css
+++ b/nav-bar/src/index.css
@@ -36,10 +36,12 @@
 	width: 100%;
 }
 .nav-list-main {
+	z-index: 1;
 	display: inline-block;
 }
 .nav-list-sub {
 	left: 0;
+	z-index: 1;
     position: absolute;
 }
 .nav-list-sub > li {
